# padel

./: .gitignore  README.md  main.py  padel-bot.md  pyproject.toml
.github/workflows/: send-message.yml  test.yml
data/: config.json  schedule_2025.json
docs/: BOT.md
src/: __init__.py  bot.py  config.py  rotation.py
tests/: __init__.py  test_bot.py  test_config.py  test_rotation.py
